...
        let message = presenter.makeResultsMessage()
        
        let alert = UIAlertController(
            title: result.title,
            message: message,
            preferredStyle: .alert)
        alert.view.accessibilityIdentifier = "GameResult"
        
        let action = UIAlertAction(title: result.buttonText, style: .default) { [weak self] _ in
            guard let self = self else { return }
            
            self.presenter.restartGame()
        }
        action.accessibilityIdentifier = "AlertButton"

        alert.addAction(action)
        
        self.present(alert, animated: true, completion: nil)
    }
    
...
